force-app/main/default/objects/Wishlist_Event__c/Wishlist_Event__c.object-meta.xml
<CustomObject>
    <label>Wishlist</label>
    <nameField>
        <displayFormat>WL-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Wishlist Event No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wishlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>