force-app/main/default/objects/Wishlist_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wishlists</relationshipLabel>
    <relationshipName>Wishlist_Events</relationshipName>
    <type>Lookup</type>
</CustomField>