force-app/main/default/objects/Wishlist_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add to Wishlist</fullName>
            </value>
            <value>
                <fullName>Remove from Wishlist</fullName>
            </value>
            <value>
                <fullName>Share Wishlist</fullName>
            </value>
            <value>
                <fullName>Price Drop</fullName>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>Back in Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>