force-app/main/default/objects/Wishlist_Event__c/fields/Variant_ID__c.field-meta.xml
<CustomField>
    <fullName>Variant_ID__c</fullName>
    <label>Variant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>