force-app/main/default/objects/Wishlist_Event__c/fields/Variant_Info__c.field-meta.xml
<CustomField>
    <fullName>Variant_Info__c</fullName>
    <label>Variant Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>