force-app/main/default/objects/Wishlist_Event__c/fields/Variant_SKU__c.field-meta.xml
<CustomField>
    <fullName>Variant_SKU__c</fullName>
    <label>Variant SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>