force-app/main/default/objects/Wishlist_Event__c/fields/Wishlist_No__c.field-meta.xml
<CustomField>
    <fullName>Wishlist_No__c</fullName>
    <displayFormat>WL-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
    <label>Wishlist No</label>
    <type>AutoNumber</type>
</CustomField>